# LHAtoLCSC

./: .copilot-instructions  .env.env.backup  .env.example  .flake8  .gitattributes  .gitignore  BUILD_RELEASE_GUIDE.md  CHANGELOG.md  CURRENCY_PERSISTENCE_COMPLETE.md  DESCRIPTION_FEATURE.md  FIRST_LAST_PAGINATION_BUTTONS_ADDED.md  GIT_RELEASE_GUIDE.md  LICENSE  MANIFEST.in  PAGINATION_BUTTON_WIDTH_FIX.md  PAGINATION_DUPLICATE_PAGES_FINAL_FIX.md  PAGINATION_DUPLICATE_PAGES_FIXED.md  PAGINATION_ENHANCEMENT_COMPLETE.md  PROJECT_PLAN.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RELEASE.md  RELEASE_QUICKSTART.md  RELEASE_SCRIPT_IMPLEMENTATION.md  ULTIMATE_RELEASE_GUIDE.md  VENV_SETUP.md  activate_venv.ps1  build_installer.py  category_tree.json  git_release.bat  git_release.ps1  git_release.py  init_db.py  installer.iss  main.py  migrate_release_scripts.py  pyproject.toml  pytest.ini  release.py  (+12 more)
.codacy/: codacy.yaml
.github/workflows/: ci.yml  release.yml
backup_scripts/: release.bat  release_workflow.py
docs/: API_DOCUMENTATION.md  DEVELOPER_GUIDE.md  SETTINGS_IMPLEMENTATION.md  SETUP_WIZARD_GUIDE.md  STOCK_BROWSER_DEBUG.md  SWITCHING_TO_REAL_API.md  USER_GUIDE.md
src/lhatolcsc/: __init__.py  __main__.py
src/lhatolcsc/api/: __init__.py  auth.py  client.py  endpoints.py  models.py
src/lhatolcsc/core/: __init__.py  bom_processor.py  config.py  logger.py  matcher.py
src/lhatolcsc/gui/: __init__.py  currency_converter.py  currency_preferences.py  main_window.py  search_history.py  settings_dialog.py  stock_browser.py  theme.py
src/lhatolcsc/utils/: __init__.py
tests/: MOCK_SERVER_GUIDE.md  README_PRICE_UPDATER.md  add_descriptions.py  assign_categories.py  check_categories.py  check_categories_in_db.py  check_prices.py  check_resistor.py  create_mock_database.py  debug_search.py  generate_mock_data.py  inspect_db.py  mock_db.py  mock_lcsc_server.py  requirements-mock.txt  test_api_categories.py  test_bulk_price_sorting.py  test_buttons_visibility.py  test_category_api.py  test_column_widths.py  test_currency_converter.py  test_description_search.py  test_fullscreen_restore.py  test_fuzzy_search.py  test_gui.py  test_horizontal_scroll.py  test_image.py  test_minimal_windows.py  test_search.py  test_search_performance.py  test_split_screen.py  test_stock_browser_fixes.py  test_title_bar.py  test_window_controls.py  update_mock_with_real_data.py  verify_bulk_calc.py  verify_categories.py
tests/test_api/: __init__.py  test_auth.py
